tests/post_inference_implicit_instantiation/post_inference_implicit_instantiation.exp
Error ----------------------------------------------------------------------------------------------------- test.js:13:1

`T` is underconstrained by call of `f1` [1] and is defined in `T` [2] [underconstrained-implicit-instantiation]

   test.js:13:1
   13| f1(arg);
       ^^^^^^^ [1]

References:
   test.js:4:21
    4| declare function f1<T>(Covariant<T>): Covariant<T>; // Contra param, Co return
                           ^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:14:1

`T` is underconstrained by call of `f2` [1] and is defined in `T` [2] [underconstrained-implicit-instantiation]

   test.js:14:1
   14| f2(arg);
       ^^^^^^^ [1]

References:
   test.js:5:21
    5| declare function f2<T>(Covariant<T>): Contravariant<T>; // Contra param, Contra return
                           ^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:15:1

`T` is underconstrained by call of `f3` [1] and is defined in `T` [2] [underconstrained-implicit-instantiation]

   test.js:15:1
   15| f3(arg);
       ^^^^^^^ [1]

References:
   test.js:6:21
    6| declare function f3<T>(Covariant<T>): Invariant<T>; // Contra param, Inv return
                           ^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:16:1

`T` is underconstrained by call of `f4` [1] and is defined in `T` [2] [underconstrained-implicit-instantiation]

   test.js:16:1
   16| f4(arg);
       ^^^^^^^ [1]

References:
   test.js:7:21
    7| declare function f4<T>(Contravariant<T>): Covariant<T>; // Co param, Co return
                           ^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:17:1

`T` is underconstrained by call of `f5` [1] and is defined in `T` [2] [underconstrained-implicit-instantiation]

   test.js:17:1
   17| f5(arg);
       ^^^^^^^ [1]

References:
   test.js:8:21
    8| declare function f5<T>(Contravariant<T>): Contravariant<T>; // Co param, Contra return
                           ^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:18:1

`T` is underconstrained by call of `f6` [1] and is defined in `T` [2] [underconstrained-implicit-instantiation]

   test.js:18:1
   18| f6(arg);
       ^^^^^^^ [1]

References:
   test.js:9:21
    9| declare function f6<T>(Contravariant<T>): Invariant<T>; // Co param, Inv return
                           ^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:19:1

`T` is underconstrained by call of `f7` [1] and is defined in `T` [2] [underconstrained-implicit-instantiation]

   test.js:19:1
   19| f7(arg);
       ^^^^^^^ [1]

References:
   test.js:10:21
   10| declare function f7<T>(Invariant<T>): Covariant<T>; // Inv Param, Co return
                           ^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:20:1

`T` is underconstrained by call of `f8` [1] and is defined in `T` [2] [underconstrained-implicit-instantiation]

   test.js:20:1
   20| f8(arg);
       ^^^^^^^ [1]

References:
   test.js:11:21
   11| declare function f8<T>(Invariant<T>): Contravariant<T>; // Inv Param, Contra Return
                           ^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:21:1

`T` is underconstrained by call of `f9` [1] and is defined in `T` [2] [underconstrained-implicit-instantiation]

   test.js:21:1
   21| f9(arg);
       ^^^^^^^ [1]

References:
   test.js:12:21
   12| declare function f9<T>(Invariant<T>): Invariant<T>; // Inv Param, Inv Return
                           ^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:31:1

`T` is underconstrained by call of `InterdependentBounds` [1] and is defined in `T` [2]
[underconstrained-implicit-instantiation]

   test.js:31:1
   31| InterdependentBounds(arg);
       ^^^^^^^^^^^^^^^^^^^^^^^^^ [1]

References:
   test.js:27:39
   27| declare function InterdependentBounds<T, U: Covariant<T>>( // Follow bounds in each position we see U
                                             ^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:31:1

`U` is underconstrained by call of `InterdependentBounds` [1] and is defined in `U` [2]
[underconstrained-implicit-instantiation]

   test.js:31:1
   31| InterdependentBounds(arg);
       ^^^^^^^^^^^^^^^^^^^^^^^^^ [1]

References:
   test.js:27:42
   27| declare function InterdependentBounds<T, U: Covariant<T>>( // Follow bounds in each position we see U
                                                ^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:44:1

`T` is underconstrained by call of `Union` [1] and is defined in `T` [2] [underconstrained-implicit-instantiation]

   test.js:44:1
   44| Union(arg);
       ^^^^^^^^^^ [1]

References:
   test.js:43:38
   43| declare var Union: (<T>(T) => T) | (<T>(null) => T);
                                            ^ [2]


Error ---------------------------------------------------------------------------------------------- upper_non_t.js:8:11

OwnProps contains a non-Type.t upper bound ObjKitT

   8| const x = HOC((x: {| foo: number, bar: number |}) => null);
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^



Found 13 errors
